--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../sources/img/" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -13,41 +14,73 @@
     <header class="container-fluid bg-danger d-flex justify-content-center">
         <h1 class="text-light mb-0 p-2 fs-6">¡Bienvenido al lugar mas completo para moteros!</h1>
     </header>
-
-        <!-- =================NAVBAR================= -->
+            <!-- =================NAVBAR================= -->
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
-            <img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84">
+              <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active text-light fs-6 aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-light fs-6 aria-current="page" href="#">Motocicletas</a>
+                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-light fs-6 aria-current="page" href="#">Financiacion</a>
+                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="#">Financiacion</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-light fs-6 aria-current="page" href="#">Accesorios</a>
+                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="#">Accesorios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-light fs-6 aria-current="page" href="#">Servicio</a>
+                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="#">Servicio</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                  <button class="btn btn-danger btn-danger-btn-outline-success" type="button">Search</button>
                 </form>
               </div>
             </div>
           </nav>
+
+        <!-- =================CARRUSEL IMAGENES================= --> 
+        <div id="carouselExampleControls" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="3000">
+                <img src="../sources/img/panigale-2.jpg" class="d-block w-100" alt="slide1">
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img src="../sources/img/MotoCenterLeon_3.jpg" class="d-block w-100" alt="slide2">
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img src="../sources/img/moto_accesorios.jpg" class="d-block w-100" alt="slide4">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     <main>
-  
+        <!-- =================CARRUSEL IMAGENES================= --> 
+        <section class="w-50 mx-auto text-center pt-5">
+            <h1 class="p-3 fs-2 border-top border-3">Mereces lo mejor, mereces nuevas aventuras y retos, <span class="text-danger"> mereces ser parte de esta familia.</span></h1>
+            <p class="p-3 fs-4"><span class="text-danger fw-bold">Motorsite </span>es el universo para los que somos amantes de los dos ruedas y vivimos la pasion de los caballos de fuerza.</p>
+        </section>
+
     </main>
 
     <header>
