adaptaciones de bootstrap

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../sources/img/" type="image/x-icon">
+    <link rel="shortcut icon" href="../sources/img/bycicle.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -55,14 +55,14 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="3000">
-                <img src="../sources/img/panigale-2.jpg" class="d-block w-100" alt="slide1">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="../sources/img/banner-1.jpg" class="d-block w-100" alt="slide1">
               </div>
               <div class="carousel-item" data-bs-interval="3000">
-                <img src="../sources/img/MotoCenterLeon_3.jpg" class="d-block w-100" alt="slide2">
+                <img src="../sources/img/banner-2.jpg" class="d-block w-100" alt="slide2">
               </div>
               <div class="carousel-item" data-bs-interval="3000">
-                <img src="../sources/img/moto_accesorios.jpg" class="d-block w-100" alt="slide4">
+                <img src="../sources/img/banner-3.jpg" class="d-block w-100" alt="slide4">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -75,17 +75,46 @@
             </button>
           </div>
     <main>
-        <!-- =================CARRUSEL IMAGENES================= --> 
+        <!-- =================TEXTO DESCRIPTIVO================= --> 
         <section class="w-50 mx-auto text-center pt-5">
             <h1 class="p-3 fs-2 border-top border-3">Mereces lo mejor, mereces nuevas aventuras y retos, <span class="text-danger"> mereces ser parte de esta familia.</span></h1>
             <p class="p-3 fs-4"><span class="text-danger fw-bold">Motorsite </span>es el universo para los que somos amantes de los dos ruedas y vivimos la pasion de los caballos de fuerza.</p>
         </section>
-
+        <!-- =================TEXTO DESCRIPTIVO================= --> 
+        <section class="container-fluid">
+            <div class="row w-75 mx-auto my-5">
+                <div class="col-lg-6 col-md-12 col-sm-12 text-center">
+                    <img src="../sources/img/Modelos2023.jpg" alt="" width="280" height="160">
+                    <div>
+                        <h3 class="fs-8 mt-4 px-4 pb-1">Modelos 2023</h3>
+                        <p class="px-4">Mira lo último en modelos que hemos traído para tí</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 text-center">
+                    <img src="../sources/img/asesoramiento.jpg" alt="" width="280" height="160">
+                    <div>
+                        <h3 class="fs-8 mt-4 px-4 pb-1">Asesoramiento</h3>
+                        <p class="px-4">Mira lo último en modelos que hemos traído para tí</p>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+                    <img src="../sources/img/mantenimiento.jpg" alt="" width="280" height="160">
+                    <div>
+                        <h3 class="fs-8 mt-4 px-4 pb-1">Mantenimiento</h3>
+                        <p class="px-4">Mira lo último en modelos que hemos traído para tí</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-    <header>
-
-    </header>
+    <footer class="container-fluid bg-dark">
+        <section class="row">
+            <div class="col-lg-12 col-md-12 col-sm-1 text-center">
+                <img src="../sources/img/bannerFooter.png" alt="" >
+            </div>
+        </section>
+    </footer>
     
     <!-- =================SCRIPT================= -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
