--- a/pages/motocicletas.html
+++ b/pages/motocicletas.html
@@ -41,8 +41,8 @@
                       </li>
                     </ul>
                     <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                        <button class="btn btn-danger btn-danger-btn-outline-success" type="button">Search</button>
                     </form>
                   </div>
                 </div>
