--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -10,40 +10,55 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-                    <!-- =================NAVBAR================= -->
-                    <nav class="navbar navbar-expand-lg bg-dark">
-                        <div class="container-fluid">
-                            <img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84">
-                          <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                          </button>
-                          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                              <li class="nav-item">
-                                <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./index.html">Home</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiacion</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./servicio.html">Servicio</a>
-                              </li>
-                            </ul>
-                            <form class="d-flex" role="search">
-                              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                              <button class="btn btn-danger btn-danger-btn-outline-success" type="button">Search</button>
-                            </form>
-                          </div>
-                        </div>
-                      </nav>
-    </header>
+<!-- =================ENCABEZADO================= -->
+<header class="container-fluid bg-danger d-flex justify-content-center">
+  <h1 class="text-light m-0 p-2 fs-6 text-center fw-bold">¡Bienvenido al lugar mas completo para moteros!</h1>
+
+</header>
+      <!-- =================NAVBAR================= -->
+  <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid">
+          <img src="../sources/img/logo.png" alt="Motorsite" width="180" height="84">
+        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active text-light fs-6 fw-bold ms-3 aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiacion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./servicio.html">Servicio</a>
+            </li>
+          </ul>
+          <div>
+            <button type="button" class="btn bg-light text-danger btn-outline-danger rounded-4 my-3"><img src="../sources/img/usuario.png  " width="25" alt=""></button>
+            <button type="button" class="btn bg-light text-danger btn-outline-danger rounded-4 my-3 mx-3"><img src="../sources/img/carrito-de-compras.png" width="25" alt=""></button>
+          </div>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-danger btn-danger-btn-outline-success" type="button">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+<!-- =================BOTON FLOTANTE================= -->
+
+  <div class="container-fluid">
+    <a href="https://wa.me/13144369005" class="btn-wsp" target="_blank">
+      <i class="fa fa-whatsapp icono"></i>
+    </a>
+  </div>
 
     <!-- =================SCRIPT================= -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
