--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,8 @@
 <body>
     <!-- =================ENCABEZADO================= -->
     <header class="container-fluid bg-danger d-flex justify-content-center">
-        <h1 class="text-light mb-0 p-2 fs-6">¡Bienvenido al lugar mas completo para moteros!</h1>
+        <h1 class="text-light m-0 p-2 fs-6 text-center fw-bold">¡Bienvenido al lugar mas completo para moteros!</h1>
+
     </header>
             <!-- =================NAVBAR================= -->
         <nav class="navbar navbar-expand-lg bg-dark">
@@ -26,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link active text-light fs-6 fw-bold ms-3 aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
@@ -41,6 +42,10 @@
                     <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./servicio.html">Servicio</a>
                   </li>
                 </ul>
+                <div>
+                  <button type="button" class="btn bg-light text-danger btn-outline-danger rounded-4 my-3"><img src="../sources/img/usuario.png  " width="25" alt=""></button>
+                  <button type="button" class="btn bg-light text-danger btn-outline-danger rounded-4 my-3 mx-3"><img src="../sources/img/carrito-de-compras.png" width="25" alt=""></button>
+                </div>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                   <button class="btn btn-danger btn-danger-btn-outline-success" type="button">Search</button>
@@ -132,7 +137,7 @@
         <section class="row">
           <div class="container-fluid bg-danger w-50 h-50 rounded-4 my-4 fs-1 text-center col-lg-12 ">
             <section class="texto-faster">
-              <p class="text-light pt-2">FAMILIA MOTORSITE</p>
+              <h1 class="text-light fs-1 pt-2"><small>FAMILIA MOTORSITE</small></h1>
             </section>
           </div>
         </section>
