--- a/pages/motocicletas.html
+++ b/pages/motocicletas.html
@@ -13,7 +13,7 @@
 <body>
     <header>
             <div class="container-fluid bg-danger d-flex justify-content-center">
-                <h1 class="text-light mb-0 p-2 fs-6">¡No esperes más! lleva tu moto 0 km</h1>
+                <h1 class="text-light mb-0 p-2 fs-6 fw-bold">¡No esperes más! lleva tu moto 0 km</h1>
             </div>
             <!-- =================NAVBAR================= -->
             <nav class="navbar navbar-expand-lg bg-dark">
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./index.html">Home</a>
+                      <a class="nav-link active text-light fs-6 fw-bold ms-3 aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
@@ -49,16 +49,174 @@
             </nav>
     </header>
 
-    <main>
-      <!-- =================BOTON FLOTANTE================= -->
+
+
+    <main class="container-fluid">
+      <!-- =================BANNER MOTOCILETAS================= -->
+      <div class="ban-2 text-center row">
+        <h5 class="mt-5 mb-5">MOTOCICLETAS DISEÑADAS PARA QUE MARQUES TU CAMINO</h1>      
+        <h5 class="mt-5 mb-5">¡No esperes más! comienza una nueva aventura con nuestros excelentes descuentos y últimos modelos</h2>
+      </div>
+        <!-- =================BANNER MARCAS ALIADAS================= -->
+        <div class="row bg-black mb-4">
+            <img src="../sources/img/bannerMarcas.png" class="col m-2" alt="">
+        </div>
+              <!-- =================BOTON FLOTANTE================= -->
       <div class="container-fluid">
           <a href="https://wa.me/13144369005" class="btn-wsp" target="_blank">
             <i class="fa fa-whatsapp icono"></i>
           </a>
       </div>
+
+            <!-- ================= CARDS TIPO DE MOTOS ================= -->
+            <section class="container-fluid">
+              <div class="row">
+                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
+                  <img src="../sources/img/sport.jpg" class="card-img-top" alt="...">
+                  <div class="col card-body">
+                    <h5 class="card-title fw-bold">DEPORTIVAS</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <ul class="col list-group list-group-flush">
+                    <li class="list-group-item bg-dark text-light">Aerodinámicas</li>
+                    <li class="list-group-item bg-dark text-light">Estéticas</li>
+                    <li class="list-group-item bg-dark text-light">Máxima velocidad</li>
+                  </ul>
+                  <div class="col card-body text-center">
+                    <a href="#" class="btn btn-danger">Ver todas</a>
+                  </div>
+                </div>
+                <!-- <============== Card 2 ==============> -->
+                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
+                  <img src="../sources/img/naked.jpg" class="card-img-top" alt="...">
+                  <div class="col card-body">
+                    <h5 class="card-title fw-bold">NAKED</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <ul class="col list-group list-group-flush">
+                    <li class="list-group-item bg-dark text-light">Potencia</li>
+                    <li class="list-group-item bg-dark text-light">ADN de Pista</li>
+                    <li class="list-group-item bg-dark text-light">Torque</li>
+                  </ul>
+                  <div class="col card-body text-center">
+                    <a href="#" class="btn btn-danger">Ver todas</a>
+                  </div>
+                </div>
+                  <!-- <============== Card 3 ==============> -->
+                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
+                  <img src="../sources/img/enduro.jpg" class="card-img-top" alt="...">
+                  <div class="col card-body">
+                    <h5 class="card-title fw-bold">ENDURO</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <ul class="col list-group list-group-flush">
+                    <li class="list-group-item bg-dark text-light">Off-Road</li>
+                    <li class="list-group-item bg-dark text-light">Resistencia</li>
+                    <li class="list-group-item bg-dark text-light">Peso dinámico</li>
+                  </ul>
+                  <div class="col card-body text-center">
+                    <a href="#" class="btn btn-danger">Ver todas</a>
+                  </div>
+                </div>
+                <!-- <============== Card 4 ==============> -->
+                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
+                  <img src="../sources/img/adventure.jpg" class="card-img-top" alt="...">
+                  <div class="col card-body">
+                    <h5 class="card-title fw-bold">ADVENTURE</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <ul class="col list-group list-group-flush">
+                    <li class="list-group-item bg-dark text-light">Versátil</li>
+                    <li class="list-group-item bg-dark text-light">Comodidad</li>
+                    <li class="list-group-item bg-dark text-light">Máxima velocidad</li>
+                  </ul>
+                  <div class="col card-body text-center">
+                    <a href="#" class="btn btn-danger">Ver todas</a>
+                  </div>
+                </div>
+                <!-- <============== Card 5 ==============> -->
+                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
+                  <img src="../sources/img/Cafe.jpg" class="card-img-top" alt="...">
+                  <div class="col card-body">
+                    <h5 class="card-title fw-bold">CAFE RACER</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <ul class="col list-group list-group-flush">
+                    <li class="list-group-item bg-dark text-light">Aerodinámicas</li>
+                    <li class="list-group-item bg-dark text-light">Estéticas</li>
+                    <li class="list-group-item bg-dark text-light">Máxima velocidad</li>
+                  </ul>
+                  <div class="col card-body text-center">
+                    <a href="#" class="btn btn-danger">Ver todas</a>
+                  </div>
+                </div>
+              </div>
+            </section>
     </main>
+
+          <!-- =================FOOTER================= --> 
+          <footer class="container-fluid bg-dark mt-5">
+            <section class="row">
+              <div class="container-fluid bg-danger w-50 h-50 rounded-4 my-4 fs-1 text-center col-lg-12 ">
+                <section class="texto-faster">
+                  <h1 class="text-light fs-1 pt-2"><small>FAMILIA MOTORSITE</small></h1>
+                </section>
+              </div>
+            </section>
+          <!-- =================FOOTER DECRIPTIVO================= --> 
+            <section>
+              <div class="row">
+                <div class="col text-light text-justify mt-3">
+                  <h1 class="fs-3 ms-4">Sedes</h1>
+                  <ul class="list-footer">
+                    <li><a href="">Bogotá</a></li>
+                    <li><a href="">Medellín</a></li>
+                    <li><a href="">Barranquilla</a></li>
+                    <li><a href="">Cali</a></li>
+                  </ul>
+                </div>
+                <div class="col text-light text-justify mt-3">
+                  <h1 class="fs-3 ms-4">Casas Aliadas</h1>
+                  <ul class="list-footer">
+                    <li><a href="">Suzuki</a></li>
+                    <li><a href="">Yamaha Colombia</a></li>
+                    <li><a href="">Kawastore</a></li>
+                    <li><a href="">Ducati importaciones</a></li>
+                    <li><a href="">Honda motores</a></li>
+                    <li><a href="">Auteco Colombia</a></li>
+                    <li><a href="">UMA Colombia</a></li>
+                  </ul>
+                </div>
+                <div class="col text-light text-justify mt-3">
+                  <h1 class="fs-3 ms-4">Extras</h1>
+                  <ul class="list-footer">
+                    <li><a href="">Cambio de Aceite</a></li>
+                    <li><a href="">LLantas de pista</a></li>
+                    <li><a href="">Frenos Brembo</a></li>
+                    <li><a href="">Juegos de calcomanias</a></li>
+                    <li><a href="">Repotenciación</a></li>
+                    <li><a href="">Servicio de Grúa</a></li>
+                  </ul>
+                </div>
+                <div class="col text-light text-justify mt-3">
+                  <h1 class="fs-3 ms-4">Contáctanos</h1>
+                  <ul class="list-footer">
+                    <li><a href="">Telefonos</a></li>
+                    <li><a href="">Email</a></li>
+                    <li><a href="">Correspondencia</a></li>
+                    <li><a href="">Whatsapp</a></li>
+                  </ul>
+                </div>
+              </div>
+                <div class="col">
+                    <img src="../sources/img/bannerFooter.png" class="img-fluid" alt="" >
+                </div>
+            </section>
+        </footer>
     
     <!-- =================SCRIPT================= -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
