--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -7,12 +7,13 @@
     <title>Accesorios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="shortcut icon" href="../sources/img/bycicle.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <!-- =================ENCABEZADO================= -->
 <header class="container-fluid bg-danger d-flex justify-content-center">
-  <h1 class="text-light m-0 p-2 fs-6 text-center fw-bold">¡Bienvenido al lugar mas completo para moteros!</h1>
+  <h1 class="text-light m-0 p-2 fs-6 text-center fw-bold">¡Una gran rodada conlleva la mejor equipación!</h1>
 
 </header>
       <!-- =================NAVBAR================= -->
@@ -31,10 +32,10 @@
               <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiacion</a>
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiación</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./servicio.html">Servicio</a>
@@ -52,15 +53,162 @@
       </div>
     </nav>
 
-<!-- =================BOTON FLOTANTE================= -->
+    <main class="container-fluid">
+      <!-- =================BANNER ACCESORIOS================= -->
+      <div>
+        <div class="ban-3 text-center row">
+          <h5 class="mt-5 mb-4 fs-4">Aquí encontrarás lo que un motero...</h1>      
+          <h1 class="mt-5 mb-5 texto-faster text-light bg-danger p-1 fs-1">¡DEBE TENER!</h2>
+        </div>
+      </div>
+        <!-- =================BANNER MARCAS ALIADAS================= -->
 
-  <div class="container-fluid">
-    <a href="https://wa.me/13144369005" class="btn-wsp" target="_blank">
-      <i class="fa fa-whatsapp icono"></i>
-    </a>
-  </div>
+        <div id="carouselExampleSlidesOnly" class="carousel slide mt-3 mb-4" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active data-bs-interval="1000"">
+              <img src="../sources/img/banner_accesorios1.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item data-bs-interval="1000"">
+              <img src="../sources/img/banner_accesorios2.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
 
-    <!-- =================SCRIPT================= -->
+              <!-- =================BOTON FLOTANTE================= -->
+      <div class="container-fluid">
+          <a href="https://wa.me/13144369005" class="btn-wsp" target="_blank">
+            <i class="fa fa-whatsapp icono"></i>
+          </a>
+      </div>
+
+      <!-- ---------------CARDS--------------- -->
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col p-2 text-center rounded-2 mb-4 mt-2">
+            <img src="../sources/img/casco.jpg" class="rounded-2" alt="" width="240" height="230">
+            <div class="mb-1 p-2 bg-dark text-light rounded-2 mt-1">
+              <h5 class="card-title fw-bold mb-2">CASCOS</h5>
+              <p class="card-text">La seguridad es primero, con nosotros tendrás las mejores marcas, calidad y protección.</p>
+            </div>
+                  <ul class="texto-mitad col list-group list-group-flush mb-2 rounded-2">
+                    <li class="list-group-item bg-dark text-light">Pista</li>
+                    <li class="list-group-item bg-dark text-light">Enduro</li> 
+                    <li class="list-group-item bg-dark text-light">Gama Media</li>
+                  </ul>
+                  <div class="col card-body text-center p-1">
+                    <a href="#" class="btn btn-danger">Ver todas</a>
+                  </div>
+          </div>
+          <div class="col p-2 text-center rounded-2 mb-4 mt-2">
+            <img src="../sources/img/chaquetas.jpg" class="rounded-2" alt="" width="240" height="230">
+            <div class="mb-1 p-2 bg-dark text-light rounded-2 mt-1">
+              <h5 class="card-title fw-bold mb-2">CHAQUETAS</h5>
+              <p class="card-text">Diseñadas para cada terreno, cada material es especial y diseñado para un desafio.</p>
+            </div>
+                  <ul class="col texto-mitad list-group list-group-flush mb-2 rounded-2">
+                    <li class="list-group-item bg-dark text-light">En Cuero</li>
+                    <li class="list-group-item bg-dark text-light">Monotrajes</li>
+                    <li class="list-group-item bg-dark text-light">Deportivas</li>
+                  </ul>
+                  <div class="col card-body text-center p-1">
+                    <a href="#" class="btn btn-danger">Ver todas</a>
+                  </div>
+          </div>
+          <div class="col p-2 text-center rounded-2 mb-4 mt-2">
+            <img src="../sources/img/botas.jpg" class="rounded-2" alt="" width="240" height="230">
+            <div class="mb-1 p-2 bg-dark text-light rounded-2 mt-1">
+              <h5 class="card-title fw-bold mb-2">BOTAS Y GUANTES</h5>
+              <p class="card-text">Manejar y estar coómodo no tiene comparación, por eso tenemos las herramientas necesarias.</p>
+            </div>
+                  <ul class="col texto-mitad  list-group list-group-flush mb-2 rounded-2">
+                    <li class="list-group-item bg-dark text-light">impermeables</li>
+                    <li class="list-group-item bg-dark text-light">De Competencia</li>
+                    <li class="list-group-item bg-dark text-light">Anti Deslizantes</li>
+                  </ul>
+                  <div class="col card-body text-center p-1">
+                    <a href="#" class="btn btn-danger">Ver todas</a>
+                  </div>
+          </div>
+          <div class="col p-2 text-center rounded-2 mb-4 mt-2">
+            <img src="../sources/img/maletas.jpg" class="rounded-2" alt="" width="240" height="230">
+            <div class="mb-1 p-2 bg-dark text-light rounded-2 mt-1">
+              <h5 class="card-title fw-bold mb-2">MALETAS</h5>
+              <p class="card-text">Una aventura lleva recuerdos, llevalos a todo lado de la mejor maleta para cada estilo y gusto.</p>
+            </div>
+                  <ul class="col texto-mitad list-group list-group-flush mb-2 rounded-2">
+                    <li class="list-group-item bg-dark text-light">Rígidas</li>
+                    <li class="list-group-item bg-dark text-light">impermeables</li>
+                    <li class="list-group-item bg-dark text-light">De Viaje</li>
+                  </ul>
+                  <div class="col card-body text-center p-1">
+                    <a href="#" class="btn btn-danger">Ver todas</a>
+                  </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+
+          <!-- ====================FOOTER===================== --> 
+          <footer class="container-fluid bg-dark mt-5">
+            <section class="row">
+              <div class="container-fluid bg-danger w-50 h-50 rounded-4 my-4 fs-1 text-center col-lg-12 ">
+                <section class="texto-faster">
+                  <h1 class="text-light fs-1 pt-2"><small>FAMILIA MOTORSITE</small></h1>
+                </section>
+              </div>
+            </section>
+          <!-- =================FOOTER DESCRIPTIVO================= --> 
+            <section>
+              <div class="row">
+                <div class="col text-light text-justify ms-5 mt-3">
+                  <h1 class="fs-3 ms-4">Sedes</h1>
+                  <ul class="list-footer">
+                    <li><a href="">Bogotá</a></li>
+                    <li><a href="">Medellín</a></li>
+                    <li><a href="">Barranquilla</a></li>
+                    <li><a href="">Cali</a></li>
+                  </ul>
+                </div>
+                <div class="col text-light text-justify mt-3">
+                  <h1 class="fs-3 ms-4">Casas Aliadas</h1>
+                  <ul class="list-footer">
+                    <li><a href="">Suzuki</a></li>
+                    <li><a href="">Yamaha Colombia</a></li>
+                    <li><a href="">Kawastore</a></li>
+                    <li><a href="">Ducati importaciones</a></li>
+                    <li><a href="">Honda motores</a></li>
+                    <li><a href="">Auteco Colombia</a></li>
+                    <li><a href="">UMA Colombia</a></li>
+                  </ul>
+                </div>
+                <div class="col text-light text-justify mt-3">
+                  <h1 class="fs-3 ms-4">Extras</h1>
+                  <ul class="list-footer">
+                    <li><a href="">Cambio de Aceite</a></li>
+                    <li><a href="">LLantas de pista</a></li>
+                    <li><a href="">Frenos Brembo</a></li>
+                    <li><a href="">Juegos de calcomanias</a></li>
+                    <li><a href="">Repotenciación</a></li>
+                    <li><a href="">Servicio de Grúa</a></li>
+                  </ul>
+                </div>
+                <div class="col text-light text-justify mt-3">
+                  <h1 class="fs-3 ms-4">Contáctanos</h1>
+                  <ul class="list-footer">
+                    <li><a href="">Telefonos</a></li>
+                    <li><a href="">Email</a></li>
+                    <li><a href="">Correspondencia</a></li>
+                    <li><a href="">Whatsapp</a></li>
+                  </ul>
+                </div>
+              </div>
+                <div class="col">
+                    <img src="../sources/img/bannerFooter.png" class="img-fluid" alt="" >
+                </div>
+            </section>
+        </footer>
+            <!-- =================SCRIPT================= -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-</body>
-</html>
+  </body>
+  </html>
