--- a/pages/motocicletas.html
+++ b/pages/motocicletas.html
@@ -31,15 +31,19 @@
                       <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiacion</a>
+                      <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
+                      <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiación</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./servicio.html">Servicio</a>
                     </li>
                   </ul>
+                  <div>
+                    <button type="button" class="btn bg-light text-danger btn-outline-danger rounded-4 my-3"><img src="../sources/img/usuario.png  " width="25" alt=""></button>
+                    <button type="button" class="btn bg-light text-danger btn-outline-danger rounded-4 my-3 mx-3"><img src="../sources/img/carrito-de-compras.png" width="25" alt=""></button>
+                  </div>
                   <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                     <button class="btn btn-danger btn-danger-btn-outline-success" type="button">Search</button>
@@ -49,8 +53,7 @@
             </nav>
     </header>
 
-
-
+    
     <main class="container-fluid">
       <!-- =================BANNER MOTOCILETAS================= -->
       <div class="ban-2 text-center row">
@@ -68,91 +71,88 @@
           </a>
       </div>
 
-            <!-- ================= CARDS TIPO DE MOTOS ================= -->
-            <section class="container-fluid">
-              <div class="row">
-                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
-                  <img src="../sources/img/sport.jpg" class="card-img-top" alt="...">
-                  <div class="col card-body">
-                    <h5 class="card-title fw-bold">DEPORTIVAS</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  </div>
-                  <ul class="col list-group list-group-flush">
+      <!-- ---------------CARDS--------------- -->
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col p-2 text-center rounded-2 mb-4 mt-2">
+            <img src="../sources/img/sport.jpg" class="rounded-2" alt="" width="240" height="230">
+            <div class="mb-1 p-2 bg-dark text-light rounded-2 mt-1">
+              <h5 class="card-title fw-bold mb-2">DEPORTIVAS</h5>
+              <p class="card-text">Explota la velocidad y la adrenalina al límite con un diseño atractivo y elegante.</p>
+            </div>
+                  <ul class="texto-mitad col list-group list-group-flush mb-2 rounded-2">
                     <li class="list-group-item bg-dark text-light">Aerodinámicas</li>
-                    <li class="list-group-item bg-dark text-light">Estéticas</li>
+                    <li class="list-group-item bg-dark text-light">Estéticas</li> 
                     <li class="list-group-item bg-dark text-light">Máxima velocidad</li>
                   </ul>
-                  <div class="col card-body text-center">
+                  <div class="col card-body text-center p-1">
                     <a href="#" class="btn btn-danger">Ver todas</a>
                   </div>
-                </div>
-                <!-- <============== Card 2 ==============> -->
-                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
-                  <img src="../sources/img/naked.jpg" class="card-img-top" alt="...">
-                  <div class="col card-body">
-                    <h5 class="card-title fw-bold">NAKED</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  </div>
-                  <ul class="col list-group list-group-flush">
-                    <li class="list-group-item bg-dark text-light">Potencia</li>
-                    <li class="list-group-item bg-dark text-light">ADN de Pista</li>
+          </div>
+          <div class="col p-2 text-center rounded-2 mb-4 mt-2">
+            <img src="../sources/img/naked.jpg" class="rounded-2" alt="" width="240" height="230">
+            <div class="mb-1 p-2 bg-dark text-light rounded-2 mt-1">
+              <h5 class="card-title fw-bold mb-2">NAKED</h5>
+              <p class="card-text">el torque, la velocidad y la versatilidad se unen para darte la mejor experiencia en las calles.</p>
+            </div>
+                  <ul class="col texto-mitad list-group list-group-flush mb-2 rounded-2">
                     <li class="list-group-item bg-dark text-light">Torque</li>
+                    <li class="list-group-item bg-dark text-light">Ergonomía</li>
+                    <li class="list-group-item bg-dark text-light">Autonomía</li>
                   </ul>
-                  <div class="col card-body text-center">
+                  <div class="col card-body text-center p-1">
                     <a href="#" class="btn btn-danger">Ver todas</a>
                   </div>
-                </div>
-                  <!-- <============== Card 3 ==============> -->
-                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
-                  <img src="../sources/img/enduro.jpg" class="card-img-top" alt="...">
-                  <div class="col card-body">
-                    <h5 class="card-title fw-bold">ENDURO</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  </div>
-                  <ul class="col list-group list-group-flush">
-                    <li class="list-group-item bg-dark text-light">Off-Road</li>
+          </div>
+          <div class="col p-2 text-center rounded-2 mb-4 mt-2">
+            <img src="../sources/img/enduro.jpg" class="rounded-2" alt="" width="240" height="230">
+            <div class="mb-1 p-2 bg-dark text-light rounded-2 mt-1">
+              <h5 class="card-title fw-bold mb-2">ENDURO</h5>
+              <p class="card-text">El terreno no tiene importancia cuando tienes una enduro, gracias a su fuerza y resistencia.</p>
+            </div>
+                  <ul class="col texto-mitad  list-group list-group-flush mb-2 rounded-2">
                     <li class="list-group-item bg-dark text-light">Resistencia</li>
-                    <li class="list-group-item bg-dark text-light">Peso dinámico</li>
+                    <li class="list-group-item bg-dark text-light">Potencia</li>
+                    <li class="list-group-item bg-dark text-light">Todoterreno</li>
                   </ul>
-                  <div class="col card-body text-center">
+                  <div class="col card-body text-center p-1">
                     <a href="#" class="btn btn-danger">Ver todas</a>
                   </div>
-                </div>
-                <!-- <============== Card 4 ==============> -->
-                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
-                  <img src="../sources/img/adventure.jpg" class="card-img-top" alt="...">
-                  <div class="col card-body">
-                    <h5 class="card-title fw-bold">ADVENTURE</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  </div>
-                  <ul class="col list-group list-group-flush">
-                    <li class="list-group-item bg-dark text-light">Versátil</li>
+          </div>
+          <div class="col p-2 text-center rounded-2 mb-4 mt-2">
+            <img src="../sources/img/adventure.jpg" class="rounded-2" alt="" width="240" height="230">
+            <div class="mb-1 p-2 bg-dark text-light rounded-2 mt-1">
+              <h5 class="card-title fw-bold mb-2">ADVENTURE</h5>
+              <p class="card-text">Vive las mejores rutas y viajes con la mayor comodidad y comfort.</p>
+            </div>
+                  <ul class="col texto-mitad list-group list-group-flush mb-2 rounded-2">
                     <li class="list-group-item bg-dark text-light">Comodidad</li>
-                    <li class="list-group-item bg-dark text-light">Máxima velocidad</li>
+                    <li class="list-group-item bg-dark text-light">Versatilidad</li>
+                    <li class="list-group-item bg-dark text-light">Touring Mode</li>
                   </ul>
-                  <div class="col card-body text-center">
+                  <div class="col card-body text-center p-1">
                     <a href="#" class="btn btn-danger">Ver todas</a>
                   </div>
-                </div>
-                <!-- <============== Card 5 ==============> -->
-                <div class="letra-G col-lg-12 col-md-6 col-sm-12 card text-center" style="width: 18rem;">
-                  <img src="../sources/img/Cafe.jpg" class="card-img-top" alt="...">
-                  <div class="col card-body">
-                    <h5 class="card-title fw-bold">CAFE RACER</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  </div>
-                  <ul class="col list-group list-group-flush">
-                    <li class="list-group-item bg-dark text-light">Aerodinámicas</li>
-                    <li class="list-group-item bg-dark text-light">Estéticas</li>
-                    <li class="list-group-item bg-dark text-light">Máxima velocidad</li>
+          </div>
+          <div class="col p-2 text-center rounded-2 mb-4 mt-2">
+            <img src="../sources/img/Cafe.jpg" class="rounded-2" alt="" width="240" height="230">
+            <div class="mb-1 p-2 bg-dark text-light rounded-2 mt-1">
+              <h5 class="card-title fw-bold mb-2">CAFE RACER</h5>
+              <p class="card-text">El estilo clásico con el ADN de carreras, una moto hecha para atraer miradas  .</p>
+            </div>
+                  <ul class="col texto-mitad list-group list-group-flush mb-2 rounded-2">
+                    <li class="list-group-item bg-dark text-light">Suavidad</li>
+                    <li class="list-group-item bg-dark text-light">Elegancia</li>
+                    <li class="list-group-item bg-dark text-light">Acabados de primera</li>
                   </ul>
-                  <div class="col card-body text-center">
+                  <div class="col card-body text-center p-1">
                     <a href="#" class="btn btn-danger">Ver todas</a>
                   </div>
-                </div>
-              </div>
-            </section>
+          </div>
+        </div>
+      </div>
     </main>
+
 
           <!-- =================FOOTER================= --> 
           <footer class="container-fluid bg-dark mt-5">
@@ -163,7 +163,7 @@
                 </section>
               </div>
             </section>
-          <!-- =================FOOTER DECRIPTIVO================= --> 
+          <!-- =================FOOTER DESCRIPTIVO================= --> 
             <section>
               <div class="row">
                 <div class="col text-light text-justify mt-3">
