--- a/pages/financiacion.html
+++ b/pages/financiacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Financiacion</title>
+    <title>Financiación</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="shortcut icon" href="../sources/img/bycicle.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
@@ -32,10 +32,10 @@
               <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiacion</a>
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
+              <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiación</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./servicio.html">Servicio</a>
@@ -52,15 +52,114 @@
         </div>
       </div>
     </nav>
+      <!-- =================BANNER MOTOCILETAS================= -->
+      <div class="container-fluid">
+        <div class="ban-4 text-center row">
+          <h1 class="mt-5 mb-4 titulo-mitad text-light fs-4">¡NO ESPERES PARA CUMPLIR TU SUEÑO!</h1>      
+          <h1 class="mt-2 mb-5 titulo-mitad text-light fs-4">SOLICITA TU CREDITO</h1>   
+          <h5 class="mt-2 mb-5 texto-mitad text-light p-1">Tenemos los mejores planes de financición con bancos aliados para que tengas la moto de tus sueños</h>
+        </div>
+      </div>
+  
+ <!-- =================SECCIONES================= --> 
+  <section class="container-fluid texto-mitad">
+  <div class="row w-75 mx-auto my-5">
+      <div class="col text-center">
+          <img src="../sources/img/bancos_aliados.jpg" class="rounded-4" alt="" width="280" height="160">
+          <div>
+              <h3 class="fs-8 mt-4 px-4 pb-1 mb-4">Bancos Aliados</h3>
+              <p class="px-4">Los bancos con las mejores tasas de financiación son nuestros aliados.</p>
+              <button type="button" class="btn btn-outline-danger">Ver Más</button>
+          </div>
+      </div>
+      <div class="col text-center">
+          <img src="../sources/img/asesor_banca.jpg" class="rounded-4" alt="" width="280" height="160">
+          <div>
+              <h3 class="fs-8 mt-4 px-4 pb-1 mb-4">Chat con Asesor</h3>
+              <p class="px-4">Usa ya nuestro Chat personalizado con asesores disponibles.</p>
+              <button type="button" class="btn btn-outline-danger">Chat</button>
+          </div>
+      </div>
+      <div class="col text-center">
+          <img src="../sources/img/credito.jpg" class="rounded-4" alt="" width="280" height="160">
+          <div>
+              <h3 class="fs-8 mt-4 px-4 pb-1 mb-4">Simulador</h3>
+              <p class="px-4">Puedes planear todo con anticipación gracias a nuestro simulador de crédito.</p>
+              <button type="button" class="btn btn-outline-danger">Ver Más</button>
+          </div>
+      </div>
+  </section>
 
-<!-- =================BOTON FLOTANTE================= -->
 
+      <!-- =================BOTON FLOTANTE================= -->
   <div class="container-fluid">
     <a href="https://wa.me/13144369005" class="btn-wsp" target="_blank">
       <i class="fa fa-whatsapp icono"></i>
     </a>
   </div>
-    
+
+            <!-- =================FOOTER================= --> 
+            <footer class="container-fluid bg-dark mt-5">
+              <section class="row">
+                <div class="container-fluid bg-danger w-50 h-50 rounded-4 my-4 fs-1 text-center col-lg-12 ">
+                  <section class="texto-faster">
+                    <h1 class="text-light fs-1 pt-2"><small>FAMILIA MOTORSITE</small></h1>
+                  </section>
+                </div>
+              </section>
+            <!-- =================FOOTER DESCRIPTIVO================= --> 
+              <section>
+                <div class="row">
+                  <div class="col text-light text-justify mt-3">
+                    <h1 class="fs-3 ms-4">Sedes</h1>
+                    <ul class="list-footer">
+                      <li><a href="">Bogotá</a></li>
+                      <li><a href="">Medellín</a></li>
+                      <li><a href="">Barranquilla</a></li>
+                      <li><a href="">Cali</a></li>
+                    </ul>
+                  </div>
+                  <div class="col text-light text-justify mt-3">
+                    <h1 class="fs-3 ms-4">Casas Aliadas</h1>
+                    <ul class="list-footer">
+                      <li><a href="">Suzuki</a></li>
+                      <li><a href="">Yamaha Colombia</a></li>
+                      <li><a href="">Kawastore</a></li>
+                      <li><a href="">Ducati importaciones</a></li>
+                      <li><a href="">Honda motores</a></li>
+                      <li><a href="">Auteco Colombia</a></li>
+                      <li><a href="">UMA Colombia</a></li>
+                    </ul>
+                  </div>
+                  <div class="col text-light text-justify mt-3">
+                    <h1 class="fs-3 ms-4">Extras</h1>
+                    <ul class="list-footer">
+                      <li><a href="">Cambio de Aceite</a></li>
+                      <li><a href="">LLantas de pista</a></li>
+                      <li><a href="">Frenos Brembo</a></li>
+                      <li><a href="">Juegos de calcomanias</a></li>
+                      <li><a href="">Repotenciación</a></li>
+                      <li><a href="">Servicio de Grúa</a></li>
+                    </ul>
+                  </div>
+                  <div class="col text-light text-justify mt-3">
+                    <h1 class="fs-3 ms-4">Contáctanos</h1>
+                    <ul class="list-footer">
+                      <li><a href="">Telefonos</a></li>
+                      <li><a href="">Email</a></li>
+                      <li><a href="">Correspondencia</a></li>
+                      <li><a href="">Whatsapp</a></li>
+                    </ul>
+                  </div>
+                </div>
+                  <div class="col">
+                      <img src="../sources/img/bannerFooter.png" class="img-fluid" alt="" >
+                  </div>
+              </section>
+          </footer>
+  
+
+  
     <!-- =================SCRIPT================= -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
