--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="shortcut icon" href="../sources/img/bycicle.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -33,10 +32,10 @@
                     <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./motocicletas.html">Motocicletas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiacion</a>
+                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./accesorios.html">Accesorios</a>
+                    <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./financiacion.html">Financiación</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-light fs-6 fw-bold aria-current="page" href="./servicio.html">Servicio</a>
@@ -141,7 +140,7 @@
             </section>
           </div>
         </section>
-      <!-- =================FOOTER DECRIPTIVO================= --> 
+      <!-- =================FOOTER DESCRIPTIVO================= --> 
         <section>
           <div class="row">
             <div class="col text-light text-justify mt-3">
