--- a/pages/motocicletas.html
+++ b/pages/motocicletas.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Motocicletas</title>
+    <meta name="description" content="Motos ultimo modelo. modelos 2023. comprar moto.">
+    <meta name="author" content="Camilo Otalora">
+    <meta name="copyright" content="Motorsite Colombia S.A">
+    <meta property="og: title" content="Motos - Motorsite">
+    <meta property="og: formulary" content="finaciacion y credito para comprar moto">
+    <title>Motocicletas - Motorsite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="shortcut icon" href="../sources/img/bycicle.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
