--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicio</title>
+    <meta name="description" content="Contacto.motos.comprar moto.motos2023.">
+    <title>Servicio - Motorsite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="shortcut icon" href="../sources/img/bycicle.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
@@ -74,7 +75,7 @@
         </div>
         <div class="col-md-6">
           <label for="inputAddress2" class="form-label">Teléfono</label>
-          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+          <input type="text" class="form-control" id="inputAddress2" placeholder="(+57)">
         </div>
         <div class="col-12">
           <button type="submit" class="btn mt-3 btn-danger">Enviar</button>
